versioned_docs/version-5.8.0/learn/2_client-libraries.md
---
title: "Client Libraries"
date: "2018-08-16"
---

The following brainCloud client libraries are available:

| Library                                                                  | Description                                                                                                  | Examples                                                            |
| ------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------- |
| [ActionScript](https://github.com/getbraincloud/braincloud-actionscript) | (**Deprecated**) AS3 for the web. Does not support RTT and related services.                                 |
| [C++](https://github.com/getbraincloud/braincloud-cpp)                   | C++ for Android, Apple, Windows and Linux. UWP and Nuget support. PS4 libraries also available upon request. | [CPP examples](https://github.com/getbraincloud/examples-cpp)       |
| [Dart](https://github.com/getbraincloud/braincloud-dart)                 | Dart library for cross platform apps.                                                                        | [Dart examples](https://github.com/getbraincloud/examples-dart)     |
| [Java](https://github.com/getbraincloud/braincloud-java)                 | Java libraries for desktop and Android.                                                                      | [Java examples](https://github.com/getbraincloud/examples-java)     |
| [JavaScript](https://github.com/getbraincloud/braincloud-js)             | JavaScript for web and node.js.                                                                              | [JS examples](https://github.com/getbraincloud/examples-javascript) |
| [Objective-C](https://github.com/getbraincloud/braincloud-objc)          | Objective-C and Swift support for AppleTV, iOS and MacOS. CocoaPods support.                                 | [Swift examples](https://github.com/getbraincloud/examples-swift)   |
| [Unity / C# ](https://github.com/getbraincloud/braincloud-csharp)        | Unity C# Library. Includes C# Windows support as well.                                                       | [Unity examples](https://github.com/getbraincloud/examples-unity)   |
| [Unreal](https://github.com/getbraincloud/braincloud-unreal-plugin-src)  | C++, Blueprint and OnlineSubSystem library for Unreal 4.                                                     | [Unreal examples](https://github.com/getbraincloud/examples-unreal) |


_Click on a link to go to the associated Github repository or tutorial._

:::info
Visit [github.com/getbraincloud](https://github.com/getbraincloud) for all libraries and examples, including Server-to-Server (S2S) libraries.
:::
